# vsezol.github.io

./: .dockerignore  .eslintrc.json  .gitignore  187.8613f016aa2bdf12.js  187.949f0d7eb91cf910.js  187.c3fe985f29407a82.js  187.c67760e9c1d68875.js  187.eb96e6bd66527aa7.js  200.html  25.93e35eb436a1af09.js  25.dc3db04b0467d762.js  25.e4f7d6d187f26025.js  25.fa68dd91c79c6225.js  3rdpartylicenses.txt  404.html  509.0284314d37ee3ef3.js  CNAME  README.md  admin.html  angular.json  asset-manifest.json  index.html  js.js  karma.conf.js  main.0d24f9749b51fb12.js  main.195abb27792af0e3.js  main.87b157dc92f4ae69.js  main.88bef3762fad2358.js  main.914fd965b9d6db1b.js  main.9b26f310a9d3afeb.js  main.d41463c5acb05c1c.js  main.f7877d7a96dec6af.js  main.fc649900c8c9e4c3.js  nx.json  package-lock.json  package.json  play.html  polyfills.1c0ec7f2c7703a1d.js  polyfills.7ba4c8a4b227be22.js  precache-manifest.1d8f9d912f16627df8124e28dbcc2424.js  (+22 more)
.claude/: launch.json
_nuxt/: 013f0d2.js  06c046b.js  06c71fc.js  0d348a5.js  10f0a25.js  34ac893.js  3a52d9e.js  44d70df.js  4bf32c4.js  70bd7e5.js  783f7ca.js  81f0a1a.js  82901d0.js  8ba8d55.js  9fc3369.js  LICENSES  cab792c.js  e83e611.js  manifest.19aa2c80.json  manifest.a406076b.json
backend/: .env.example  Dockerfile  pyproject.toml  railway.json
backend/app/: admin.py  admin_config.py  agent.py  calendar_service.py  config.py  limits.py  main.py  rate_limit.py  schemas.py  security.py  sessions.py
backend/app/static/: admin.html
backend/scripts/: cleanup_spam_events.py  get_google_refresh_token.py
backend/tests/: test_api.py
(+215 files in other folders)
