[project]
name = "vsezol-agent-backend"
version = "1.0.0"
description = "Backend for Vsevolod Zolotov's personal AI agent: chat + meeting booking"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-ai-slim[google,anthropic]>=1.0,<2.0",
    "pydantic-settings>=2.6",
    "google-api-python-client>=2.150",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
